feat: implementa demissão de funcionários e arquivamento de pastas, além de melhorias na UI e no gerenciamento de gavetas

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -197,7 +197,7 @@
                         </div>
                         <div class="stat-content">
                             <div class="stat-value" id="gavetasCheias">0</div>
-                            <div class="stat-label">Gavetas &gt;90%</div>
+                            <div class="stat-label">Gavetas Cheias</div>
                         </div>
                     </div>
                 </div>
