feat: enhance file management system with new envelope handling and employee details
- Updated SQL queries to include additional employee details (matricula, departamento, data_admissao) in various functions.
- Refactored the createSolicitacao and aprovarSolicitacao methods to use new IPC calls for better separation of concerns.
- Introduced dual search functionality for employees by name and matricula in the UI.
- Added new styles for search bars and envelope chips to improve user experience.
- Implemented logic to handle envelope selection based on employee status and availability during withdrawal requests.
- Enhanced the UI to display envelope information in various sections, including requests and withdrawals.
- Removed deprecated employee management functionalities to streamline the application.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -241,8 +241,9 @@
                 <div class="view-header">
                     <h1>Solicitar Retirada de Arquivo</h1>
                 </div>
-                <div class="search-bar">
-                    <input type="text" id="searchFuncionarios" class="form-control" placeholder="Buscar funcionário por nome...">
+                <div class="search-bar search-bar--dual">
+                    <input type="text" id="searchFuncionarioNome" class="form-control" placeholder="Buscar por nome...">
+                    <input type="text" id="searchFuncionarioMatricula" class="form-control" placeholder="Buscar por matrícula...">
                 </div>
                 <div id="funcionariosContainer" class="table-container"></div>
             </div>
@@ -334,13 +335,6 @@
                     <h2>Solicitações Pendentes de Aprovação</h2>
                 </div>
                 <div id="solicitacoesPendentesContainer" class="table-container" style="margin-bottom: 32px;"></div>
-
-                <!-- Gerenciamento de Funcionários -->
-                <div class="section-header">
-                    <h2>Gerenciamento de Funcionários</h2>
-                    <button id="btnNovoFuncionario" class="btn btn--primary">+ Novo Funcionário</button>
-                </div>
-                <div id="funcionariosAdminContainer" class="table-container" style="margin-bottom: 32px;"></div>
 
                 <!-- Gerenciamento de Usuários -->
                 <div class="section-header">
