--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -364,6 +364,9 @@
     <div id="toast" class="toast"></div>
 
     <!-- Scripts modulares -->
+    <script src="js/utils/date-utils.js"></script>
+    <script src="js/utils/dom-utils.js"></script>
+    <script src="js/controllers/modal-controller.js"></script>
     <script src="js/database.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/ui.js"></script>
