--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -134,8 +134,31 @@
                         <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
                         <circle cx="12" cy="7" r="4"></circle>
                     </svg>
-                    <div>
-                        <div class="user-name" id="currentUserName"></div>
+                    <div class="user-text">
+                        <div class="user-name-row">
+                            <div class="user-name" id="currentUserName"></div>
+                            <button type="button" id="themeToggle" class="theme-switch" aria-pressed="mixed" data-theme="system" title="Clique para inverter o tema; um segundo clique volta ao padrão do sistema">
+                                <span class="theme-switch__thumb" aria-hidden="true"></span>
+                                <span class="theme-switch__icon theme-switch__icon--sun" aria-hidden="true">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <circle cx="12" cy="12" r="4"></circle>
+                                        <line x1="12" y1="1" x2="12" y2="3"></line>
+                                        <line x1="12" y1="21" x2="12" y2="23"></line>
+                                        <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+                                        <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+                                        <line x1="1" y1="12" x2="3" y2="12"></line>
+                                        <line x1="21" y1="12" x2="23" y2="12"></line>
+                                        <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+                                        <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+                                    </svg>
+                                </span>
+                                <span class="theme-switch__icon theme-switch__icon--moon" aria-hidden="true">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+                                    </svg>
+                                </span>
+                            </button>
+                        </div>
                         <div class="user-role" id="currentUserRole"></div>
                     </div>
                 </div>
@@ -369,6 +392,7 @@
     <script src="js/controllers/modal-controller.js"></script>
     <script src="js/database.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/theme.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/app.js"></script>
 </body>
